oxiplate-derive/tests/broken/numbers/integer-exponent-without-digit.stderr
error: Expected an expression.
 --> tests/broken/numbers/integer-exponent-without-digit.rs:4:23
  |
4 | #[oxiplate_inline("{{ 19e }}")]
  |                       ^^^^^^
